GMM_Main/src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Campus_Location__c</fullName>
        <formula>Region__r.Campus_City__c + &apos;,&apos; + TEXT(Region__r.Campus_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Number__c</fullName>
        <label>Class Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corps_Member_Arrival__c</fullName>
        <label>Corps Member Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation__c</fullName>
        <inlineHelpText>Corps Member Departure</inlineHelpText>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Induction__c</fullName>
        <label>Member Induction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCCC_Campus_ID__c</fullName>
        <formula>Region__r.NCCC_Campus_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCCC Campus ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Region__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOFA__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>RFP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Class Year</relationshipLabel>
        <relationshipName>Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <formula>Region__r.Region_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Campus Record ID</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Class Year</relationshipLabel>
        <relationshipName>Class</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Slots__c</fullName>
        <label>Slots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Class_Identifier__c</fullName>
        <label>Sub-Class Identifier</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Leader_Arrival__c</fullName>
        <inlineHelpText>Class Year Start</inlineHelpText>
        <label>Team Leader Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Leader_Departure__c</fullName>
        <inlineHelpText>End of Class Year</inlineHelpText>
        <label>Team Leader Departure Date</label>
        <type>Date</type>
    </fields>
    <label>Class Year</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Class Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Class_Year_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Team_Leader_Arrival__c  &gt;=   Corps_Member_Arrival__c</errorConditionFormula>
        <errorDisplayField>Corps_Member_Arrival__c</errorDisplayField>
        <errorMessage>Corps Member Arrival date cannot be Earlier Than Team Leader Arrival Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corps_Member_Arrival_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Corps_Member_Arrival__c  &gt;   Member_Induction__c</errorConditionFormula>
        <errorDisplayField>Member_Induction__c</errorDisplayField>
        <errorMessage>Member Induction Date cannot be Earlier Than Corps Member Arrival Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Graduation_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Member_Induction__c  &gt;=   Graduation__c</errorConditionFormula>
        <errorDisplayField>Graduation__c</errorDisplayField>
        <errorMessage>Graduation Date cannot be Earlier Than Member Induction Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Leader_Departure_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Graduation__c  &gt;=   Team_Leader_Departure__c</errorConditionFormula>
        <errorDisplayField>Team_Leader_Departure__c</errorDisplayField>
        <errorMessage>Team Leader Departure Date cannot be Earlier Than  Graduation Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Leader_Departure_Date_Rule2</fullName>
        <active>true</active>
        <errorConditionFormula>Team_Leader_Departure__c &gt; Region__r.Region_End_Date__c</errorConditionFormula>
        <errorDisplayField>Team_Leader_Departure__c</errorDisplayField>
        <errorMessage>Team Leader Departure date must be less than or equal to the Campus End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_leader_arrival_date</fullName>
        <active>true</active>
        <description>Team Leader Arrival date must be greater than or equal to the date in the Region Start Date</description>
        <errorConditionFormula>Team_Leader_Arrival__c  &lt;  Region__r.Region_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Team_Leader_Arrival__c</errorDisplayField>
        <errorMessage>Team Leader Arrival date must be greater than or equal to the date in the Campus Start Date</errorMessage>
    </validationRules>
</CustomObject>